1.0.0
- Fix regression: .sin files could not be opened (#167)
0.9.9
- Remove admin-requirement during install (Windows)
- Support newer correlator.com .sin file format (experimental, #135)
- Add smart progress dialog for fitting (#155)
- Statistics: check "filename/title" by default (#151)
- Documentation: fix bad LaTeX commands (#163)
0.9.8
- Bugfixes:
  - Indexing error when saving sessions (#154)
  - Page number truncated in csv export (#159)
  - Export of csv files used incorrect normalization (#153)
  - Normalization parameter was not displayed in the 'Info' tool
0.9.7
- Second triplet time is now larger than first triplet time
  by default
- Remove a hack that causes a run through all pages
  e.g. when an average is created
- Bugfixes:
  - Opening sessions with user-defined models
  - Saving sessions with comments containing non-ASCII characters
  - Windows build: Graphical plot export was misconfigured
    -> added matplotlibrc patch in .spec file
0.9.6
- Bugfixes:
  - Fixed minor wx sizer problems for the tools
  - Fixed `AttributeError` in page.py if no weights are present
- New confocal fitting models (#111):
  - 3D+3D, 2D+2D, 3D+2D; no triplet
  - T+T+2D+2D, T+T+3D+2D; double triplet
  - T+3D+3D+3D, T+3D+3D+2D (#40, #59)
- Under the hood:
  - Separation of core and GUI modules
  - Include tests in distributions for PyPI
  - Improve automated testing on Windows and Mac OS
  - More constraint options for fitting
0.9.5
- Bugfixes
  - Closing the batch control window causes segfault bug (#142)
  - Closing page causes error when batch control is active (#143)
  - Plot normalization causes "Save Session" to fail (#144)
  - Plot normalization not loaded from session (#145)
0.9.4
- Batch control allows to select individual parameters (#108)
- Allow to exclude pages from batch fitting (#107)
- Bugfixes:
  - Fix `ValueError` in parameter display
  - Possibly fixed error with `yaml.safe_dump`
    on Mac OSx 10.8.5